dropshot/tests/fail/bad_endpoint6.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
  --> $DIR/bad_endpoint6.rs:24:23
   |
24 |     Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
   |
   = note: required by `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint6.rs:24:8
     |
24   |     Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     | pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                           --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint6.rs:24:5
     |
24   |     Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     | pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                           --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint6.rs:23:94
     |
23   |   async fn bad_endpoint(_rqctx: &RequestContext<()>) -> Result<HttpResponseOk<Ret>, HttpError> {
     |  ______________________________________________________________________________________________^
24   | |     Ok(HttpResponseOk(Ret { x: "Oxide".to_string(), y: 0x1de }))
25   | | }
     | |_^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint6.rs:19:1
     |
19   | / #[endpoint {
20   | |     method = GET,
21   | |     path = "/test",
22   | | }]
     | |__^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     |   pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                             --------- required by this bound in `HttpResponseOk`

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future {wrapped_bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> $DIR/bad_endpoint6.rs:19:1
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(RequestContext<()>) -> impl Future {wrapped_bad_endpoint}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |           FuncParams: Extractor + 'static,
   |                                   ------- required by this bound in `ApiEndpoint::<Context>::new`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
